refactor casts to not use objectMapper, add enum tests